[project]
name = "kim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "chainlit>=2.8.3",
    "decouple>=0.0.7",
    "dotenv>=0.9.9",
    "openai-agents>=0.3.3",
    "rich>=14.1.0",
]

[project.scripts]
kim = "kim:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
